# kafka-connect-ui

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: config.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  ClusterStatus.js  ConnectorDetails.js  Connectors.js
frontend/src/styles/: App.css  ConnectorDetails.css  Connectors.css
